--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     // Retrofit
-    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
+
     implementation 'com.squareup.retrofit2:retrofit:2.7.1' // DO NOT UPGRADE BECAUSE OF SUPPORTING API LEVEL 19
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.4' // DO NOT UPGRADE BECAUSE OF SUPPORTING API LEVEL 19
     implementation 'com.squareup.retrofit2:converter-gson:2.6.4'
@@ -75,6 +74,13 @@ dependencies {
     // Rx Java
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //OkHttp
+    implementation ("com.squareup.okhttp3:okhttp:3.12.12"){ // DO NOT UPGRADE BECAUSE OF SUPPORTING API LEVEL 19
+        force = true //API 19 support
+    }
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.12' // DO NOT UPGRADE BECAUSE OF SUPPORTING API LEVEL 19
+
 
     // Room
     implementation 'androidx.room:room-runtime:2.2.5'
